--- a/index.html
+++ b/index.html
@@ -28,5 +28,45 @@
                 </div>
             </div>
         </div>
+
+        <div class="container2">
+            <div class="randtext">
+                <div class="randtextbold">Some random information.</div>
+            </div>
+            <div class="squares">
+                <div class='square'></div>
+                <div class='square'></div>
+                <div class='square'></div>
+                <div class='square'></div>
+            </div>
+            <div class="textimg">
+                <div class="txt">this is some subtext under an illustration or image</div>
+                <div class="txt">this is some subtext under an illustration or image</div>
+                <div class="txt">this is some subtext under an illustration or image</div>
+                <div class="txt">this is some subtext under an illustration or image</div>
+            </div>  
+        </div>
+
+        <div class="container3">
+            <div class="sub1">
+                <div class="paragraph">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            </div>
+            <div class="sub2">
+                <div class="author">-Thor, God of Thunder</div>
+            </div>
+            
+        </div>
+
+        <div class="container4">
+            <div class="calltoaction">
+                <div class="leftside">
+                    <div class="sec1">Call to action! It's time!</div>
+                    <div class="sec2">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="sec3">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
